# test-bot

./: Dockerfile  pyproject.toml  requirements.txt
data/: data.py
logic/: __init__.py  check_test.py  create_test.py  main.py  menu.py  start.py
utils/: __init__.py  callback_class.py  requests.py  set_bot_commands.py  states.py
